Avoid deprecated new Integer() form